# UR_Mjlab_BC_RL

./: .gitignore  README.md  pyproject.toml
assets/mujoco/objects/: cube.xml  goal_marker.xml  peg.xml  plate.xml  slot_block.xml  t_shape.xml  table.xml
assets/mujoco/scenes/: multitask.xml  peg_in_slot.xml  pick_place.xml  push_t.xml
assets/mujoco/ur5/: d435_camera.xml  robotiq_85_gripper.xml  ur5e_arm.xml  ur5e_assets.xml  ur5e_body.xml  ur5e_full.xml  ur5e_worldbody.xml
assets/mujoco/ur5/meshes/: RealSense_D435_Shelf_d359ca29.STL  forearm_861ccd15_1.mtl  left_finger_tip_4c918411_0.mtl  upperarm_12b51e98_0.mtl  ur_to_robotiq_adapter_e07b68cf_1.mtl
configs/imitation/: default.yaml  tasks.yaml
configs/model/: aloha_act.yaml  imitation.yaml  multimodal.yaml  reinforcement.yaml
scripts/: collect_keyboard_expert.py  collect_scripted_expert.py  eval_policy.py  fix_checkpoint_bn.py  merge_datasets.py  replay_imitation_dataset.py  train_aloha_act.py  train_imitation.py  train_ppo_finetune.py  truncate_state_dataset.py
src/ur_mjlab_bc_rl/: __init__.py  config_loader.py
src/ur_mjlab_bc_rl/imitation/: __init__.py
src/ur_mjlab_bc_rl/imitation/dataset/: __init__.py  episode.py  lerobot_io.py
src/ur_mjlab_bc_rl/imitation/expert_generation/: __init__.py
src/ur_mjlab_bc_rl/imitation/mujoco_env/: __init__.py  camera.py  (+4 more)
src/ur_mjlab_bc_rl/models/: __init__.py  distributions.py  specs.py
src/ur_mjlab_bc_rl/reinforcement/: __init__.py  bc_to_ppo.py  checkpoint_utils.py  env_cfg.py
tests/: __init__.py  test_imitation.py  test_models.py  test_reinforcement.py
(+42 files in other folders)
